# projectM-musikcube

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL-iTunes-macos.txt  README.md  TODO.txt  cmake_install.cmake  post_build.sh  projectM-musikcube.sln
docs/: projectM.dox
fonts/: CMakeLists.txt
presets/: CMakeLists.txt
presets_milkdrop/: CMakeLists.txt
presets_milkdrop_104/: CMakeLists.txt
presets_milkdrop_104/PaxHeader/: Studio Music - (Sex is like math) Add the bed, subtract the clothes, divide the legs and
presets_milkdrop_200/: CMakeLists.txt
presets_projectM/: CMakeLists.txt
script/: clean-nix.sh  copy-for-testing.sh
src/: CMakeLists.txt  EventMapper.h  Plugin.cpp  SDLWindow.cpp  SDLWindow.h  UnixVisualizer.cpp  Utility.cpp  Utility.h  WindowsVisualizer.cpp  cmake_install.cmake  projectM-musikcube.vcxproj  projectM-musikcube.vcxproj.filters  projectMPcmVisualizer.cpp  projectM_musikcube_exe  publish.sh
src/NativePresets/: CMakeLists.txt  cmake_install.cmake
src/WinLibs/FTGL/include/: FTFont.h
src/WinLibs/FTGL/src/: FTFont.cpp
src/WinLibs/FTGL/win32_vcpp/: UpgradeLog.htm  ftgl.sln
src/WinLibs/FTGL/win32_vcpp/ftgl_demo/: ftgl_demo.vcxproj  ftgl_demo.vcxproj.filters  ftgl_demo_2.vcxproj  ftgl_demo_2.vcxproj.filters
src/WinLibs/FTGL/win32_vcpp/ftgl_dll/: ftgl_dll.vcxproj  ftgl_dll.vcxproj.filters
src/WinLibs/FTGL/win32_vcpp/ftgl_static_lib/: ftgl_static_lib.vcproj  ftgl_static_lib.vcxproj  ftgl_static_lib.vcxproj.filters
src/WinLibs/FTGL/win32_vcpp/unit_tests/: unit_tests.vcxproj  unit_tests.vcxproj.filters
src/WinLibs/SDL2-2.0.5/VisualC/SDL/: SDL.vcxproj
src/WinLibs/SDL2-2.0.5/VisualC/SDLmain/: SDLmain.vcxproj
src/WinLibs/SDL2-2.0.5/VisualC/Win32/Debug/: SDL2.exp  SDL2.ilk  SDL2.lib  SDL2main.lib
src/WinLibs/SDL2-2.0.5/VisualC/Win32/Release/: SDL2.exp  SDL2.lib  SDL2main.lib
src/WinLibs/SDL2-2.0.5/VisualC/tests/controllermap/Win32/Debug/: controllermap.vcxprojResolveAssemblyReference.cache
src/WinLibs/SDL2-2.0.5/src/: SDL.c
src/WinLibs/SDL2-2.0.5/src/stdlib/: SDL_stdlib.c
src/WinLibs/freetype-2.3.5/builds/win32/visualc/: UpgradeLog.htm  freetype.sln  freetype.vcproj  freetype.vcxproj  freetype.vcxproj.filters
src/WinLibs/freetype-2.3.5/src/pcf/: pcfdrivr.c
src/WinLibs/glew/lib/: glew32s.lib  glew32sd.lib
src/libprojectM/: CMakeLists.txt  ChangeLog  Common.hpp  ConfigFile.cpp  HungarianMethod.hpp  KeyHandler.cpp  PCM.cpp  PipelineMerger.cpp  PresetChooser.hpp  PresetFactory.cpp  PresetFactory.hpp  PresetLoader.cpp  PresetLoader.hpp  UpgradeLog.htm  carbontoprojectM.h  cmake_install.cmake  config.inp  config.inp.in  libprojectM.pc  libprojectM.sln  libprojectM.vcxproj  libprojectM.vcxproj.filters  projectM.cpp  projectM.hpp
src/libprojectM/MilkdropPresetFactory/: IdlePreset.cpp  IdlePreset.hpp  MilkdropPreset.cpp  MilkdropPreset.hpp  MilkdropPresetFactory.cpp  MilkdropPresetFactory.hpp  Parser.cpp  cmake_install.cmake
src/libprojectM/NativePresetFactory/: NativePresetFactory.cpp  NativePresetFactory.hpp  cmake_install.cmake
src/libprojectM/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  ShaderEngine.cpp  TextureManager.cpp  TextureManager.hpp  VideoEcho.cpp  Waveform.cpp  cmake_install.cmake
src/libprojectM/cmake/: FindGLEW.cmake
src/libprojectM/fonts/: CMakeLists.txt
src/libprojectM/presets/: CMakeLists.txt
src/projectM-musikcube/: CMakeLists.txt  EventMapper.h  Utility.cpp  cmake_install.cmake  projectM-musikcube.vcxproj  projectM-musikcube.vcxproj.filters  projectMPcmVisualizer.cpp  projectMPcmVisualizerNix.cpp  projectMvis.cc  sdltoprojectM.h
src/projectM-sdlvis/: Info.plist  UpgradeLog.htm  projectMvis.cc  projectMvis.dsp  projectMvis.sln  projectMvis.vcxproj  projectMvis.vcxproj.filters  sdltoprojectM.h
